<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/eHO_Image"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:contentDescription="@string/eHO_Image_desc"
        android:src="@drawable/on_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/footer_image"
        android:layout_width="290dp"
        android:layout_height="63dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/footer_desc"
        android:src="@drawable/eho_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_message"
        android:layout_width="264dp"
        android:layout_height="42dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/myriad_pro_condensed"
        android:text="@string/main_message"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/patient_view_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footer_image"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/pharmacist_view_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/myriad_pro_condensed"
        android:onClick="showPharmaViewActivity"
        android:text="@string/pharmacist_view_btn_name"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/practitioner_view_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/myriad_pro_condensed"
        android:onClick="showPractitionerViewActivity"
        android:text="@string/practitioner_view_btn_name"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/pharmacist_view_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/patient_view_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/myriad_pro_condensed"
        android:onClick="showPatientViewDialog"
        android:text="@string/patient_view_btn_name"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/practitioner_view_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</android.support.constraint.ConstraintLayout>